Renamed Limited pess ⇒ Pess and Pess ⇒ Extended pess

--- a/minimax.tex
+++ b/minimax.tex
@@ -153,7 +153,7 @@ alternative using positional scoring rules and we provide incremental elicitatio
 
 \paragraph{Experimental conclusions}
 Our approach permits to compare experimentally strategies that question the chair, the voters, or both. We describe informally here a few of the conclusions stemming from these experiments, given a problem involving $m$ alternatives and $n$ voters. First, low levels of regret can be reached by asking approximately $m n$ questions to the voters and $m$ questions to the chair. 
-Second, the decrease in $\MMR$ is approximately linear with the number of questions asked, except when the regret approaches zero. \commentBN{Not true anymore, some example with Pess (former Lim.Pes.) 
+Second, the decrease in $\MMR$ is approximately linear with the number of questions asked, except when the regret approaches zero. \commentBN{Not true anymore, some example with Pess 
 $\begin{array}{ccc}
 	k \quad & \textbf{(5,10)}&\textbf{(10,20)}\\
 	0 \quad &10&20\\
@@ -437,30 +437,31 @@ We define here the various strategies we tested experimentally. A strategy tells
 The \strat{Random} strategy gives a baseline for comparison and informs about the difficulty of an elicitation problem. 
 This strategy first chooses equiprobably whether it will ask a question about weights or a question about a preference ordering. If it opted for a question about weights, it draws one rank in $1 ≤ r ≤ m-2$ equiprobably, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$. If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; draws an alternative $a$ equiprobably among those involved in some incomparabilities in $\ppref_j$; and draws an alternative $b$ equiprobably among those incomparable with $a$ in $\ppref_j$.
 
-The \strat{Pessimistic} strategy considers the same candidate questions as the Random strategy, but instead of picking one among those randomly, selects the question that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer. Then the badness of the question in the worst case is:
-\begin{align}
-	\max_{i=1,2} \MMR(\pprofile_i,W_i)
-\end{align}
-This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes ths measure of minimax regret {\em a posteriori}. 
-Note that other aggregators than $\max$ can be used as well. 
-We use the $\max$ operator because \citet{Cailloux2014} reported that pessimistic aggregation works much better than optimistic aggregation, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
-However, to avoid the absorption property of max, we adopt the $\leximax$ criterion as an aggregator: if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest value.
-(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the minimal $\MMR$ values, with a predominant weight to the maximal one.)
-We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it estimates an upper bound to the possible quality of a myopic strategy.
-
-The \strat{Limited pessimistic} strategy uses the same criterion as the pessimistic strategy, but limiting it to a small set of $n + m$ candidate questions: one per agent, and one per rank. Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $\bar{y}, \bar{\profile}, \bar{\w}$ are, respectively, the choice of $y$, the completion of the profile and the selection of weights for which $x^{*}$ is the minimax optimal alternative. 
-The \strat{Limited pessimistic} strategy first selects $n$ candidates questions to the agents using the heuristic proposed by \citet{Lu2011}: for each agent $j$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, the candidate question concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
+Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $\bar{y}, \bar{\profile}, \bar{\w}$ are, respectively, the choice of $y$, the completion of the profile and the selection of weights for which $x^{*}$ is the minimax optimal alternative. 
+The \strat{Pessimistic} strategy considers a set of $n + m$ candidate questions: one per agent, and one per rank.
+The candidate questions to the agents use the heuristic proposed by \citet{Lu2011}: for each agent $j$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, the candidate question concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
 To understand the intuition behind favoring these two alternatives for our questions, recall that, as shown in the proof of \cref{claim:completion}, in order to increase $\PMR(x^{*},\bar{y})$, an adversary should place as many alternatives as she can above $x^{*}$ if $x^* \ppref_j \bar{y}$, and between $\bar{y}$ and $x^{*}$ if $\bar{y} \ppref_j x^*$. 
 \commentOC{I do not understand the reasoning in the next sentence.}
 An intuitive way to reduce the pairwise max regret would be, therefore, to ask questions involving such alternatives, hoping for an answer that would prevent the adversary to play his best game. 
-The candidate questions to the chair are determined as in the Random and Pessimistic strategies.
-After having selected the candidate questions, we apply the Pessimistic strategy: we evaluate, for each of the questions, the minimax regret for the two possible answers and we choose the best according to $\leximax$.
+The candidate questions to the chair are determined as in the Random strategy.
+The strategy then selects among these $n + m$ candidate questions one that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer, numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
+\begin{align}
+	\MMR(\pprofile_1,W_1) + \frac{1}{10000}\MMR(\pprofile_2, W_2).
+\end{align}
+This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
+We use this operator that is similar to a $\max$ operator because \citet{Cailloux2014} reported that pessimistic aggregation works much better than optimistic aggregation, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
+However, to avoid the absorption property of max, we adopt criterion closer to $\leximax$ as an aggregator: if the maximal $\MMR$ of two questions are (nearly) equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest value.
+(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the minimal $\MMR$ values, with a predominant weight to the maximal one.)
+
+The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of $m² n + m$ candidate questions, the same as those considered by the Random strategy.
+After having selected the candidate questions, we apply the same operator as for the Pessimistic strategy: we evaluate, for each of the possible questions, the minimax regret for the two possible answers and we choose the best according to (quasi-)$\leximax$.
+We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) more efficient. We expect that Extended pessimistic will be applicable only to very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$.
 
 The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions asked to agents and to the chair, and compare the performance of asking questions to the chair first or to the voters first. 
-The \strat{Two phases - ac} variant first asks $p$ questions to the agents, then $k-p$ questions to the chair, using in both cases Limited pessimistic to select the specific questions; whereas the \strat{Two phases - ca} variant starts with $p$ questions to the chair, then questions the agents. 
+The \strat{Two phases - ac} variant first asks $p$ questions to the agents, then $k-p$ questions to the chair, using in both cases Pessimistic to select the specific questions; whereas the \strat{Two phases - ca} variant starts with $p$ questions to the chair, then questions the agents. 
 %Note that when asking first only questions to the chair, if the obtained knowledge approximates well the scoring vector, then in the second part of the elicitation we fall into the more classical setting of incompleteness of preferences assuming a known voting rule. 
 %And vice-versa when asking first questions to the agents, the second part of the elicitation is similar to the setting of incompletely specified scoring rule. 
-This strategy also permits to simulate the current state of the art when considering incomplete preferences. By asking enough questions to the chair we can reduce our problem into a well studied one of incompleteness of preferences knowing the voting rule. Similarly, if we invert to whom ask questions first, we fall instead in an already studied case of uncertainty of the voting rule with a known complete profile. 
+%This strategy also permits to simulate the current state of the art when considering incomplete preferences. By asking enough questions to the chair we can reduce our problem into a well studied one of incompleteness of preferences knowing the voting rule. Similarly, if we invert to whom ask questions first, we fall instead in an already studied case of uncertainty of the voting rule with a known complete profile. 
 
 Finally, the \strat{Elitist} strategy aims at uncovering as quickly as possible the top alternative of each agent. It asks $m-1$ questions to each agent in turn. 
 Given an agent to query $j$, it asks about an alternative currently undominated in $\ppref_j$ and any alternative that it has not yet asked about for that agent, or equivalently, any alternative that is currently incomparable to this alternative. This approach guarantees that the top alternative in the ranking of $j$ will be known after having asked $j$ exactly $m-1$ questions.
@@ -473,17 +474,17 @@ This strategy can be expected to perform well when the chair assigns an importan
 \label{sec:experiments}
 \commentOC{
 	\begin{enumerate}
-		\item Limited pessimistic performs best.
+		\item Pessimistic performs best.
 		\begin{itemize}
 			\item Much better than Random
-			\item Better than Pess and Elitist!
-			\item Graph featuring (5, 10, 150, 200 runs), Random, Pess, L. pess, Elitist.
+			\item Better than XPess and Elitist!
+			\item Graph featuring (5, 10, 150, 200 runs), Random, XPess, Pess, Elitist.
 			\item And table like table 1.
 		\end{itemize}
-		\item L pess performs well.
+		\item Pess performs well.
 		\begin{itemize}
 			\item Reach regret: $n/10$. For this, we need $m^x n$ questions. TODO Olivier: find $x$. TODO Beatrice: check and compile results in a table specifically for this (see: function regret by k).
-			\item Much faster than Pess [do this much later]
+			\item Much faster than XPess [do this much later]
 		\end{itemize}
 		\item Decrease in MMR is linear with nb of questions
 		\begin{itemize}
@@ -494,10 +495,11 @@ This strategy can be expected to perform well when the chair assigns an importan
 			\item Interleaving $k$ questions is similar to asking $p$ questions to the chair first and then $k - p$ to the voters when $p$ is chosen optimally. [do this a bit later]
 			\item A question to the chair has a similar value (in regret) as a qV: use the graph summarized by Olivier. Check prop. qC. Check on other sizes.
 		\end{itemize}
-		\item Limited pessimistic approx Limited optimistic [do this much later]
+		\item Pessimistic approx Optimistic [do this much later]
 	\end{enumerate}
 	TODO: find a way of displaying the graph so that it is understandable in B/W.
-	Variations around the small size. Time comparison Pess VS LPess?
+	Variations around the small size. Time comparison XPess VS Pess?
+	Check Pess VS XPess on other sizes.
 }
 Our experiments are described by topic here below. We generally use the following protocol, deviations are indicated below for each experiment.
 
@@ -506,7 +508,7 @@ The preferences are generated following an impartial culture assumption: the lin
 
 We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the strategy under test, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained, compute the resulting $\MMR$ values along the way for various values of $k$. We repeat this whole experiment a variable number of times indicated below, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation \textit{sd}.
 
-\subsection{Judging limited pessimistic relatively}
+\subsection{Judging pessimistic relatively}
 \begin{table}
 	\begin{center}
 		\resizebox{\columnwidth}{!}{
@@ -524,7 +526,7 @@ We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the pr
 		\end{tabular}
 		}
 	\end{center}
-	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions and $200$ runs.\commentBN{Attention, I already corrected the table with the new names. The column Pes. here is the Limited Pessimistic, I inverted them to follow the presentation order.}}
+	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions and $200$ runs.}
 	\label{tab:smallSize}
 \end{table}
 
@@ -537,18 +539,18 @@ We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the pr
 
 Our first experimental result concerns small size situations. We picked $m = 5, n = 10$ to illustrate our results (variations around this size yield similar conclusions). 
 \Cref{tab:smallSize} and \cref{fig:smallSize} compares some of our strategies in this case.
-We see that that Limited pessimistic performs better than Random and Pessimistic on a small size problem.
+We see that that Pessimistic performs better than Random and Extended pessimistic on a small size problem.
 (These figures also display the performance of the Elitist strategy, to which we will come back.)
 
-We observe that the Pessimistic strategy is able to reduce the regret almost completely after $30$ questions. We also see that Limited pessimistic performs better than Pessimistic, showing that Limited pessimistic chooses candidate questions wisely; this is good news since (for $m=5$ and $n=5$), the latter strategy is much faster and takes only $2.6s$ for a complete elicitation session, while the former takes $16s$.
+%We observe that the Pessimistic strategy is able to reduce the regret almost completely after $30$ questions. We also see that Pessimistic performs better than Extended pessimistic, showing that Pessimistic chooses candidate questions wisely; this is good news since (for $m=5$ and $n=5$), the latter strategy is much faster and takes only $2.6s$ for a complete elicitation session, while the former takes $16s$.
 
-Asking Random questions does not permit to reach a low regret level even after having asked 100 questions, whereas a low regret level (MMR = 1) is reached by Limited pessimistic before having asked 60 questions.
+Asking Random questions does not permit to reach a low regret level even after having asked 100 questions, whereas a low regret level (MMR = 1) is reached by Pessimistic before having asked 60 questions.
 
-We also see that Pessimistic performs slightly less well than Limited pessimistic. Although they come close, Pessimistic performs significatively less well, in the sense that the numbers are consistently in favor of Limited pessimistic if running the experiment again.
+We also see that Extended pessimistic performs slightly less well than Pessimistic. Although they come close, Extended pessimistic performs significatively less well, in the sense that the numbers are consistently in favor of Pessimistic if running the experiment again.
 
-We next focus on the Limited pessimistic strategy, because Pessimistic is too slow to be ran repeatedly on much bigger problem sizes.
+We next focus on the Pessimistic strategy, because Extended pessimistic is too slow to be ran repeatedly on much bigger problem sizes.
 
-\subsection{Judging limited pessimistic absolutely}
+\subsection{Judging Pessimistic absolutely}
 \label{sec:lowRegret}
 \begin{table}
 	\begin{center}
@@ -569,7 +571,7 @@ We next focus on the Limited pessimistic strategy, because Pessimistic is too sl
 	\label{tab:lowRegret}
 \end{table}
 
-The previous section compares Limited pessimistic to other strategies. In this set of experiments, we wonder about the absolute quality of Limited pessimistic. For practical usability, it is important to know how many questions should be asked in order to reach a low regret level. Here, we consider a low level to be a tenth of the number of voters ($n/10$): such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the voters rank $x$ last instead of first.
+The previous section compares Pessimistic to other strategies. In this set of experiments, we wonder about the absolute quality of Pessimistic. For practical usability, it is important to know how many questions should be asked in order to reach a low regret level. Here, we consider a low level to be a tenth of the number of voters ($n/10$): such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the voters rank $x$ last instead of first.
 The results for various sizes are displayed in \cref{tab:lowRegret}. From these numbers, we obtain the function $0.4m^{1.6}n$ as a general approximation formula for the number of questions required to reach a low regret level. We see that the number of questions required grows approximately linearly with the number of voters and grows less fast than the square of the number of alternatives, for the sizes we considered. In other words, on average, assuming no questions get asked to the committee, each voter will have to answer $0.4m^{1.6}$ questions in order to to reach a low regret level. For $m = 5$, that is about $6$ questions per voter; for $m = 10$, that is about $17$ questions per voter; and for $m = 15$, that is about $33$ questions per voter.
 
 \subsection{Comparing with full elicitation}
@@ -612,7 +614,7 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 	\label{tab:twoP400}
 \end{table}
 
-The experiments so far let the strategy decide the target of its questions, leaving open the possibility of questioning either the chair or an agent at each step. It may be desired in practical implementations to restrict the strategy to ask questions to agents only, or mostly, or to wonder what is lost in terms of regret by asking more questions to the chair, or what is lost if the circumstances require to ask all questions to the chair first, then only question the voters, or the other way around. Such restrictions may be useful because of (partial) unavailability of the chair, or because the estimated cognitive costs may differ sensibly, as these types of questions differ in nature. \Cref{tab:twoP400} show the MMR value that is reached in a problem of size $m = 10, n = 20$ after $400$ questions, using various constraints added to the Limited pessimistic strategy. The constraints have this form: the strategy must ask $p$ questions to the chair first, then $400 - p$ questions to the agents; or conversely, must ask $400 - p$ questions to the agents before turning to the chair. These numbers are to be compared with the MMR value reached after 400 questions with the unconstrained Limited pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.62$.% ± $0.56$.
+The experiments so far let the strategy decide the target of its questions, leaving open the possibility of questioning either the chair or an agent at each step. It may be desired in practical implementations to restrict the strategy to ask questions to agents only, or mostly, or to wonder what is lost in terms of regret by asking more questions to the chair, or what is lost if the circumstances require to ask all questions to the chair first, then only question the voters, or the other way around. Such restrictions may be useful because of (partial) unavailability of the chair, or because the estimated cognitive costs may differ sensibly, as these types of questions differ in nature. \Cref{tab:twoP400} show the MMR value that is reached in a problem of size $m = 10, n = 20$ after $400$ questions, using various constraints added to the Pessimistic strategy. The constraints have this form: the strategy must ask $p$ questions to the chair first, then $400 - p$ questions to the agents; or conversely, must ask $400 - p$ questions to the agents before turning to the chair. These numbers are to be compared with the MMR value reached after 400 questions with the unconstrained Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.62$.% ± $0.56$.
 
 \section{Conclusions}  
 \label{sec:conclusions}
